                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 02-12-2005 changed: Made stick + trigger reading independent (fixes small issues with sticks being offcenter
                       intefering with the triggers)
 - 02-12-2005 added: Bitrate tag to http command getCurrentlyPlaying.
 - 02-12-2005 fixed: Added further DVD layer change hacks.
 - 01-12-2005 fixed: IMDB downloaded thumbs for stacked titles
 - 01-12-2005 fixed: .tbn thumbnails for stacked titles based on the first stacked filename
 - 01-12-2005 fixed: .nfo files for stacked titles based on the first stacked filename
 - 01-12-2005 added: File Browser Dialog - requires skinning
 - 01-12-2005 fixed: Path history was incorrect for media windows started with XBMC.ActivateWindow(window,path)
 - 01-12-2005 fixed: Memory leak in multicoloured text rendering (edit, rss controls)
 - 30-11-2005 fixed: [ 1330862 ] Bookmarks OSD Window does not disappear on video end.
 - 30-11-2005 fixed: Notifications cause stack overflow if the stack dialog is on screen and left or right is pressed.
 - 29-11-2005 updated: German language file
 - 29-11-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 29-11-2005 updated: Norwegian language file (Thnx to vnm)
 - 29-11-2005 updated: French language file (Thnx to modhack)
 - 29-11-2005 updated: Dutch language file (Thnx to tijmengozer)
 - 29-11-2005 fixed: file sizes were missing in my videos.
 - 28-11-2005 fixed: Stacked .nfo file paths were incorrect.
 - 28-11-2005 added: Workaround for ReadFile() returning incorrect data at the DVD layer change - requires special version
                     of libdvdcss-2.dll (rename from libdvdcss-2.dll_layerchangehack).