@@ -227,6 +227,15 @@ int CSMBDirectory::OpenDir(CStdString& strAuth)
       iTryAutomatic--;
     }
 
+    // remove the / or \ at the end. the samba library does not strip them off
+    // don't do this for smb:// !!
+    int len = strPath.length();
+    if (strPath.at(len - 2) != '/' &&
+        (strPath.at(len - 1) == '/' || strPath.at(len - 1) == '\\'))
+    {
+      strPath.erase(len - 1, 1);
+    }
+    
     smb.Lock();
     fd = smbc_opendir(strPath.c_str());
     smb.Unlock();
